welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:2: error: ')' expected but 'else' found.
  if (a%10==b%10 || b%10 ==c%10 || a%10==c%10 || (a%10==b%10 && b%10==c%10){return true} else{return false}
                                                                                         ^